--- a/www/deploy/requirements.txt
+++ b/www/deploy/requirements.txt
@@ -1,6 +1,8 @@
 Django==1.7.8
-# cache
-django-redis==4.2.0
+
+# database
+psycopg2==2.6.1
+dj-database-url==0.3.0
 
 # production
 raven==5.4.1
@@ -9,3 +11,6 @@ raven==5.4.1
 django-debug-toolbar==1.3.2
 django-extensions==1.5.5
 flake8==2.4.1
+
+requests==2.7.0
+requests[security]
