launching of celery worker and web worker on single heroku's dyno is implemented

--- a/www/Procfile
+++ b/www/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn deploy.wsgi.dev --log-file -
-worker: celery worker --app=celery_conf
+# use honcho for running worker and web on single dyno
+web: honcho -f ProcfileHoncho start
