--- a/www/deploy/requirements.txt
+++ b/www/deploy/requirements.txt
@@ -17,5 +17,8 @@ django-debug-toolbar==1.3.2
 django-extensions==1.5.5
 flake8==2.4.1
 
-requests[security]
 celery==3.1.18
+requests[security]
+langid
+rutermextract==0.2
+topia.termextract==1.1.0
