--- a/www/pytest.ini
+++ b/www/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=settings_test
+# DJANGO_SETTINGS_MODULE=settings_test
+DJANGO_SETTINGS_MODULE=settings
 
 # Look for modules with any name
 python_files=tests/*.py
