--- a/www/deploy/requirements.txt
+++ b/www/deploy/requirements.txt
@@ -13,9 +13,16 @@ honcho==0.6.6
 raven==5.4.1
 
 # Development packages
+pytest==2.8.2
+pytest-django==2.9.1
 django-debug-toolbar==1.3.2
 django-extensions==1.5.5
 flake8==2.4.1
 
-requests[security]
 celery==3.1.18
+django-celery==3.1.17
+requests[security]
+langid
+rutermextract==0.2
+topia.termextract==1.1.0
+djrill==1.4.0
